--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "typescript": "^3.8.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
+  },
+  "optionalDependencies": {
+    "dat.gui": "^0.7.7",
+    "@types/dat.gui": "^0.7.5"
   }
 }
