--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "./build"
+    "outDir": "./build",
+    "typeRoots": ["./node_modules/@types"]
   },
   "exclude": [
     "node_modules"
