--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "html-canvas-fw",
   "version": "0.0.5",
   "description": "",
-  "main": "src",
-  "types": "build",
+  "main": "build/src/index.js",
+  "types": "build/src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
