--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "html-canvas-fw",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "",
-  "main": "src",
-  "types": "build",
+  "main": "build/src/index.js",
+  "types": "build/src/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
