--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "html-canvas-fw",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "",
   "main": "build/src/index.js",
   "types": "build/src/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "tsc",
     "build": "webpack",
     "watch": "webpack --watch"
   },
