--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "html-canvas-fw",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "description": "",
   "main": "build/src/index.js",
-<<<<<<< HEAD
   "types": "build/src/index.d.ts",
-=======
-  "types": "build/src/index.ts",
->>>>>>> aa93a6fc5fc0026fa2036793bb30580205f2c421
   "scripts": {
-    "prepublish": "tsc",
+    "prepare": "tsc",
     "build": "webpack",
     "watch": "webpack --watch"
   },
